<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    android:gravity="center">

    <!-- Day Selector Layout -->

    <LinearLayout
        android:id="@+id/countItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:paddingBottom="45dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/sunButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Sunday"
                android:textOn="@string/shortString_Sunday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <ToggleButton
                android:id="@+id/monButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/sunButton"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Monday"
                android:textOn="@string/shortString_Monday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <ToggleButton
                android:id="@+id/tueButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/monButton"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Tuesday"
                android:textOn="@string/shortString_Tuesday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <ToggleButton
                android:id="@+id/wedButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tueButton"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Wednesday"
                android:textOn="@string/shortString_Wednesday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <ToggleButton
                android:id="@+id/thuButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/wedButton"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Thursday"
                android:textOn="@string/shortString_Thursday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <ToggleButton
                android:id="@+id/friButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/satButton"
                android:layout_toRightOf="@id/thuButton"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Friday"
                android:textOn="@string/shortString_Friday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

            <ToggleButton
                android:id="@+id/satButton"
                android:layout_width="53.3dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_inactive"
                android:fontFamily="@font/rubik_medium"
                android:textColor="@color/buttonDarkBlue"
                android:textOff="@string/shortString_Saturday"
                android:textOn="@string/shortString_Saturday"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <!-- View Monthly Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rubik_medium"
                android:paddingBottom="25dp"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/countDailyFoodItems"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="@font/rubik_medium"
                android:paddingBottom="25dp"
                android:text="Daily Food Items: 0"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/EditPetButton"
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/rounded_corner_inactive"
            android:backgroundTint="@color/buttonLightBlue"

            android:fontFamily="@font/rubik_medium"
            android:text="Edit Pet Information"
            android:textAllCaps="false"
            android:textColor="@color/buttonDarkBlue"
            android:textSize="25dp"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ViewMonthlyButton"
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/rounded_corner_inactive"
            android:backgroundTint="@color/buttonLightBlue"

            android:fontFamily="@font/rubik_medium"
            android:text="View Monthly"
            android:textAllCaps="false"
            android:textColor="@color/buttonDarkBlue"
            android:textSize="25sp"

            />

        <!-- Daily Meal Plan Display -->

        <TextView
            android:id="@+id/petScreenMealPlanDisplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:background="@color/textBackgroundGray"
            android:fontFamily="@font/rubik_medium"
            android:padding="10dp"
            android:text="No Meal Plan recorded for selected date"
            android:textSize="25sp"
            android:textColor="@color/black" />
    </LinearLayout>


    <!-- End Day Selector Layout -->
</RelativeLayout>